Ensure 1px visibility of collapsed sidebar for screen readers to work

--- a/src/styles/annotator/components/sidebar.scss
+++ b/src/styles/annotator/components/sidebar.scss
@@ -48,7 +48,7 @@
     }
 
     &.sidebar-collapsed {
-      @apply ml-0;
+      @apply ml-[-1px];
     }
   }
 
